2005-10-14  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/sys/linux/sys/types.h (int8_t): Add type.

2005-10-14  Bob Wilson  <bob.wilson@acm.org>

        * libm/common/Makefile.am (doc): Do not append to $(TARGETDOC).
        * libm/common/Makefile.in: Regenerate.
        * libm/common/common.tex: Delete file.
        * libm/math/math.tex: Include .def files from common/.
        * libm/mathfp/mathfp.tex: Likewise.

2005-10-14  Bob Wilson  <bob.wilson@acm.org>

	* libc/libc.texinfo (Top): Surround this node with @ifnottex
	instead of @ifinfo.  Update menu to add Introduction and match
	SUBDIRS order.
        (Introduction): New section.

2005-10-14  Bob Wilson  <bob.wilson@acm.org>

        * libc/reent/reent.tex (Reentrancy): Replace "Cygnus C Library"
        with "Red Hat newlib C Library".
        * libc/sys.tex (Stubs): Likewise.
        * libm/math/math.tex (Math): Likewise.
        * libm/mathfp/mathfp.tex (Math): Likewise.

2005-10-11  Shaun Jackman  <sjackman@gmail.com>

	* libc/include/stdio.h (dprintf): New declaration.
	(vdprintf): Ditto.
	* libc/stdio/Makefile.am (GENERAL_SOURCES): Add dprintf.c
	and vdprintf.c.
	* libc/stdio/Makefile.in: Regenerate.
	* libc/stdio/dprintf.c: New file.
	* libc/stdio/vdprintf.c: New file.
	* libc/stdio/stdio.tex (dprintf): New entry.

2005-10-11  David Weatherford  <weath@tensilica.com>

	* libc/stdio/vfprintf.c (_VFPRINTF_R): Recognize 'F' format.
	Print "inf" and "nan" in lowercase for e/f/g formats and in 
	uppercase for E/F/G formats.

2005-10-07  Bob Wilson  <bob.wilson@acm.org>

	* libc/stdlib/mallocr.c (mALLOc, rEALLOCc, mEMALIGn): Set errno
	to ENOMEM on failure.

2005-10-06  Ralf Corsepius <ralf.corsepius@rtems.org>

	* libc/include/stdint.h: Add [u]int_fast<N>_t types.

2005-10-04  Ralf Corsepius <ralf.corsepius@rtems.org>

	* libc/include/stdint.h: Move magic to set __have_long* to the
	beginning.  Use #if __have* instead of #if defined(__have*).
	Minor typo fixes.
